Prepare production OIDC email authentication
